--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero" id="home" style="margin-top: 70px;">
+    <section class="hero" id="home">
         <div class="hero-content">
             <h1>Pro Tennis Academy – Ghaziabad’s No.1 Tennis Training Academy</h1>
             <p>Learn tennis with expert coaching by Mr. Ashish. Professional training for all ages. Develop skills,
@@ -1687,5 +1687,6 @@
         });
     </script>
 </body>
+
 
 </html>
