--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
                         </div>
                     </div>
                     <div class="coach-info">
-                        <h3>Yashika Singh</h3>
+                        <h3>Muskan Beniwal</h3>
                         <div class="coach-role">Fitness & Conditioning Coach</div>
                         <p>Sports science graduate specializing in tennis-specific fitness, agility training, and injury
                             prevention for competitive players.</p>
@@ -1690,3 +1690,4 @@
 
 
 </html>
+
